--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -531,3 +531,6 @@ clear_env = no
 php_value[error_log] = /tmp/heroku.php-fpm.www.${PORT}.log
 
 include=${HEROKU_PHP_FPM_CONFIG_INCLUDE}
+
+extension=phalcon.so
+
